<resources>
    <string name="app_name">Animals List</string>
    <string name="name">Name:</string>
    <string name="breed">Breed:</string>
    <string name="age">Age:</string>
    <string name="animal">Animal</string>
    <string name="animal_name">Animal name</string>
    <string name="animal_age">Animal age</string>
    <string name="animal_breed">Animal breed</string>
    <string name="add_animal">Add Animal</string>
    <string name="animals">Animals</string>
    <string name="back_btn">back_button</string>
    <string name="sort_breed">sort_by_breed</string>
    <string name="sort_age">sort_by_age</string>
    <string name="sort_name">sort_by_name</string>
    <string name="update_info">Update Info</string>
    <string name="switch_room_string">use Room, if not included, then SQLOpenHelper will be used</string>
</resources>